force-app/main/default/objects/External_Trainer__c.object
<CustomObject>
    <fields>
        <fullName>Available__c</fullName>
        <label>Available</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                    <default>true</default>
                    <label>Available</label>
                </value>
                <value>
                    <fullName>PTO</fullName>
                </value>
                <value>
                    <fullName>OOO</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Location__c</fullName>
        <label>Assigned Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fairfax</fullName>
                </value>
                <value>
                    <fullName>SPS</fullName>
                </value>
                <value>
                    <fullName>Reston</fullName>
                </value>
                <value>
                    <fullName>UTA-ERB</fullName>
                </value>
                <value>
                    <fullName>USF-NEC</fullName>
                </value>
                <value>
                    <fullName>ASU</fullName>
                </value>
                <value>
                    <fullName>WVU-CBE</fullName>
                </value>
                <value>
                    <fullName>Queens</fullName>
                </value>
                <value>
                    <fullName>USF-SOC</fullName>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>USF-BSN</fullName>
                </value>
                <value>
                    <fullName>UTA-PRS</fullName>
                </value>
                <value>
                    <fullName>UTA-K</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Email</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>External_Trainers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mobile_Number__c</fullName>
        <label>Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Preferred_Location__c</fullName>
        <label>Preferred Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fairfax</fullName>
                </value>
                <value>
                    <fullName>SPS</fullName>
                </value>
                <value>
                    <fullName>Reston</fullName>
                </value>
                <value>
                    <fullName>UTA-ERB</fullName>
                </value>
                <value>
                    <fullName>USF-NEC</fullName>
                </value>
                <value>
                    <fullName>ASU</fullName>
                </value>
                <value>
                    <fullName>WVU-CBE</fullName>
                </value>
                <value>
                    <fullName>Queens</fullName>
                </value>
                <value>
                    <fullName>USF-SOC</fullName>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>USF-BSN</fullName>
                </value>
                <value>
                    <fullName>UTA-PRS</fullName>
                </value>
                <value>
                    <fullName>UTA-K</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Training_Skills__c</fullName>
        <label>Training Skills</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Appian BPM</fullName>
                </value>
                <value>
                    <fullName>Big Data/Hadoop</fullName>
                </value>
                <value>
                    <fullName>Business Analyst</fullName>
                </value>
                <value>
                    <fullName>Dynamics CRM</fullName>
                </value>
                <value>
                    <fullName>ETL/Informatics</fullName>
                </value>
                <value>
                    <fullName>Full Stack .NET</fullName>
                </value>
                <value>
                    <fullName>Full Stack Java/JEE</fullName>
                </value>
                <value>
                    <fullName>Full Stack JTA</fullName>
                </value>
                <value>
                    <fullName>Microservices</fullName>
                </value>
                <value>
                    <fullName>Oracle Fusion Middleware</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pega</fullName>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>System Admin</fullName>
                </value>
                <value>
                    <fullName>Web Tools</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>External Trainer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>External Trainer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>External Trainers</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Check_if_Manager</fullName>
        <active>false</active>
        <errorConditionFormula>AND(Manager__r.UserRole.Name != &quot;CTO&quot;,Manager__r.UserRole.Name != &quot;Manager&quot;)</errorConditionFormula>
        <errorDisplayField>Manager__c</errorDisplayField>
        <errorMessage>Your selected Manager user is not a valid Manager.</errorMessage>
    </validationRules>
</CustomObject>