force-app/main/default/objects/External_Trainer__c/validationRules/Check_if_Manager.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_if_Manager</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Manager__r.UserRole.Name != &quot;CTO&quot;,Manager__r.UserRole.Name != &quot;Manager&quot;)</errorConditionFormula>
    <errorDisplayField>Manager__c</errorDisplayField>
    <errorMessage>Your selected Manager user is not a valid Manager.</errorMessage>
</ValidationRule>